# FastVideoSeamCarving

./: .gitignore  CMakeLists.txt  README.md
include/: seamCarving.hpp
src/: seamCarving.cpp
tests/: dance_480.m4v  dance_720.m4v  f2_480p.m4v  f2_720p.m4v
